runs/github.com/y/yangfan1993/binary-connect/logs/test-notebook-BC_MNIST_final.ipynb-2020-07-21T08.34.txt
[I 200721 08:35:03 inrepo:36] Testing notebook BC_MNIST_final.ipynb
[W 200721 08:35:03 inrepo:48] No such kernel python2, falling back on kernel language=python
[W 200721 08:35:03 inrepo:60] Using kernel python3 to provide language: python
[I 200721 08:35:04 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
import numpy as np
import theano
import theano.tensor as T 
import lasagne
from __future__ import print_function

import BC_layers
import BC_utils
from pylearn2.datasets.mnist import MNIST
from pylearn2.utils import serial
import timeit
import inspect
import time
import logging
import scipy.io
from lasagne.layers import batch_norm

__docformat__ = 'restructedtext en'
import matplotlib
matplotlib.use('Agg')
import matplotlib.pyplot as plt
%matplotlib inline
------------------

[0;36m  File [0;32m"<ipython-input-1-b188a5b7bc94>"[0;36m, line [0;32m8[0m
[0;31m    import BC_utils[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m from __future__ imports must occur at the beginning of the file

SyntaxError: from __future__ imports must occur at the beginning of the file (<ipython-input-1-b188a5b7bc94>, line 8)


Container exited with status: {'Error': None, 'StatusCode': 1}
